# sourcegraph

./: CHANGELOG.md  go.mod  go.sum  package.json  pnpm-lock.yaml
.buildkite/hooks/: pre-checkout
.github/workflows/: jetbrains-tests.yml
client/jetbrains/src/main/java/com/sourcegraph/cody/: CodyToolWindowContent.java
client/web-sveltekit/: package.json
client/web/src/enterprise/search-jobs/: SearchJobsPage.story.tsx  SearchJobsPage.tsx
client/web/src/search/results/: StreamingSearchResults.tsx
cmd/frontend/graphqlbackend/: BUILD.bazel  external_service.go  schema.go  schema.graphql  search_results_test.go  site.go
cmd/gitserver/server/: patch.go  server.go  vcs_syncer_git.go  vcs_syncer_perforce.go
dev/update-embeddings-list/: package.json
docker-images/prometheus-gcp/: Dockerfile
enterprise/cmd/worker/internal/search/: BUILD.bazel  exhaustive_search_test.go
internal/conf/: computed.go  computed_test.go
internal/conf/conftypes/: consts.go
internal/database/: BUILD.bazel  database.go  schema.json  schema.md
internal/database/dbmocks/: mocks_temp.go
internal/repos/: perforce.go
internal/search/: types.go
internal/search/exhaustive/service/: BUILD.bazel  searcher.go  searcher_test.go  service.go
internal/search/job/jobutil/: job.go  repo_pager_job.go
internal/search/job/printer/: sexp.go
internal/types/: types.go
migrations/frontend/: squashed.sql
schema/: schema.go  site.schema.json
third-party-licenses/: ThirdPartyLicenses.csv
wolfi-packages/: p4-fusion.yaml
