load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//dev:go_defs.bzl", "go_test")

go_library(
    name = "service",
    srcs = [
        "search.go",
        "searcher.go",
        "service.go",
    ],
    importpath = "github.com/sourcegraph/sourcegraph/internal/search/exhaustive/service",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/actor",
        "//internal/metrics",
        "//internal/observation",
        "//internal/search",
        "//internal/search/client",
        "//internal/search/exhaustive/store",
        "//internal/search/exhaustive/types",
        "//internal/uploadstore",
        "//lib/errors",
        "@com_github_sourcegraph_log//:log",
        "@io_opentelemetry_go_otel//attribute",
    ],
)

go_test(
    name = "service_test",
    srcs = [
        "search_test.go",
        "searcher_test.go",
    ],
    embed = [":service"],
    deps = [
        "//internal/database/dbmocks",
        "//internal/search/backend",
        "//internal/search/client",
        "//internal/search/exhaustive/types",
        "//internal/types",
        "//internal/uploadstore/mocks",
        "@com_github_sourcegraph_log//logtest",
        "@com_github_sourcegraph_zoekt//:zoekt",
        "@com_github_stretchr_testify//require",
        "@org_golang_x_exp//slices",
    ],
)
